--- a/designmodel/mediator.html
+++ b/designmodel/mediator.html
@@ -6,14 +6,14 @@
 </head>
 <body>
 select color:<select id="colorSelect">
-    <option></option>
-    <option>red</option>
-    <option>blue</option>
+    <option value="">--choice--</option>
+    <option value="red">red</option>
+    <option value="blue">blue</option>
 </select>
 select memory:<select id="memorySelect">
-    <option></option>
-    <option>16G</option>
-    <option>32G</option>
+    <option value="">--choice--</option>
+    <option value="16G">16G</option>
+    <option value="32G">32G</option>
 </select>
 buy num:<input type="text" id="numberInput"/><br/>
 <div>----------------------------------------- - - - - - </div>
